Modify partition scheme for OTA and add WiFi connectivity

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.36/platform-espressif32.zip
 board = esp32dev
 framework = arduino
-board_build.partitions = huge_app.csv
-lib_deps =
+board_build.partitions = default.csv
+lib_deps = 
 	fastled/FastLED@^3.10.3
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	adafruit/DHT sensor library@^1.4.6
