--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,5 @@ lib_deps =
 	fastled/FastLED@^3.10.3
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	adafruit/DHT sensor library@^1.4.6
+	bblanchon/ArduinoJson@^7.4.2
 monitor_speed = 115200
