--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:prod]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.36/platform-espressif32.zip
 board = esp32dev
 framework = arduino
@@ -19,3 +19,18 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.6
 	bblanchon/ArduinoJson@^7.4.2
 monitor_speed = 115200
+build_flags = -D APP_ENV_PROD
+
+[env:dev]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.36/platform-espressif32.zip
+board = esp32dev
+framework = arduino
+board_build.partitions = default.csv
+lib_deps = 
+	fastled/FastLED @ ^3.10.3
+	adafruit/Adafruit Unified Sensor @ ^1.1.15
+	adafruit/DHT sensor library @ ^1.4.6
+	jandrassy/ArduinoOTA @ ^1.1.0
+monitor_speed = 115200
+build_flags = -D APP_ENV_DEV
+build_src_filter = +<*>-<ota.cpp>
