--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,9 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.4.2
 monitor_speed = 115200
 build_flags = -D APP_ENV_PROD
+build_src_filter=
+	+<*>
+	-<dev_ota.cpp>
 
 [env:dev]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.36/platform-espressif32.zip
@@ -30,7 +33,8 @@ lib_deps =
 	fastled/FastLED @ ^3.10.3
 	adafruit/Adafruit Unified Sensor @ ^1.1.15
 	adafruit/DHT sensor library @ ^1.4.6
-	jandrassy/ArduinoOTA @ ^1.1.0
 monitor_speed = 115200
 build_flags = -D APP_ENV_DEV
-build_src_filter = +<*>-<ota.cpp>
+build_src_filter = 
+	+<*>
+	-<ota.cpp>
