--- a/platformio.ini
+++ b/platformio.ini
@@ -18,9 +18,10 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	adafruit/DHT sensor library@^1.4.6
 	bblanchon/ArduinoJson@^7.4.2
+	olikraus/U8g2@^2.36.17
 monitor_speed = 115200
 build_flags = -D APP_ENV_PROD
-build_src_filter=
+build_src_filter = 
 	+<*>
 	-<dev_ota.cpp>
 
@@ -33,6 +34,7 @@ lib_deps =
 	fastled/FastLED @ ^3.10.3
 	adafruit/Adafruit Unified Sensor @ ^1.1.15
 	adafruit/DHT sensor library @ ^1.4.6
+	olikraus/U8g2@^2.36.17
 monitor_speed = 115200
 build_flags = -D APP_ENV_DEV
 build_src_filter = 
