--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.6
 	bblanchon/ArduinoJson@^7.4.2
 	olikraus/U8g2@^2.36.17
+	mathertel/OneButton@^2.6.1
 monitor_speed = 115200
 build_flags = -D APP_ENV_PROD
 build_src_filter = 
@@ -35,6 +36,8 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor @ ^1.1.15
 	adafruit/DHT sensor library @ ^1.4.6
 	olikraus/U8g2@^2.36.17
+	bxparks/AceButton@^1.10.1
+	mathertel/OneButton@^2.6.1
 monitor_speed = 115200
 build_flags = -D APP_ENV_DEV
 build_src_filter = 
