--- a/platformio.ini
+++ b/platformio.ini
@@ -36,11 +36,10 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor @ ^1.1.15
 	adafruit/DHT sensor library @ ^1.4.6
 	olikraus/U8g2@^2.36.17
-	bxparks/AceButton@^1.10.1
 	mathertel/OneButton@^2.6.1
 monitor_speed = 115200
 build_flags = -D APP_ENV_DEV
 build_src_filter = 
 	+<*>
 	-<ota.cpp>
-upload_protocol = espota
+; upload_protocol = espota
